[package]
name = "git-pkg"
version = "0.1.0"
edition = "2021"
description = "A universal dependency manager on top of git submodules."
authors = ["Ales Tsurko <ales.tsurko@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
git2 = "0.18.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
toml = { version = "0.8.8", features = ["display", "parse"] }
wax = "0.6.0"

[lints.clippy]
all = "warn"

[lints.rust]
missing_docs = "warn"
